--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.1",
+    "react-testing-library": "5.6.0",
+    "rmwc": "^5.0.23-rc.0"
   },
   "scripts": {
     "start": "react-scripts start",
